--- a/css/style.css
+++ b/css/style.css
@@ -62,8 +62,14 @@
     line-height: 4rem;
 }
 .nav-bg {
+    background-color: rgba(255, 255, 255,0.2);
+    backdrop-filter: blur(30px);
     min-height: 4rem;
     box-shadow: 0 -10px 20px 10px rgb(157, 157, 157);
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    z-index: 3;
 }
 .navber a {
     color: var(--text-color);
@@ -82,12 +88,12 @@
         width: 70%;
         border-radius: 2rem;
         position: absolute;
-        top: 20%;
+        top: 7.5rem;
         left: 50%;
         transform: translate(-50%, 0);
         text-align: center;
         line-height: 40px;
-        z-index: 2;
+        z-index: 3;
         backdrop-filter: blur(1rem);
     }
     
@@ -101,6 +107,18 @@
     .menu-bar li a:hover {
         color: cyan;
     }
+}
+
+.blur-for-menu-open {
+    display: none;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 4.8rem;
+    left: 0;
+    z-index: 2;
+    background-color: rgba(255, 255, 255,0.1);
+    backdrop-filter: blur(3px);
 }
 
 
@@ -118,7 +136,7 @@
 .section-1 {
     display: grid;
     grid-template-columns: 5rem 1fr;
-    margin-top: 3.5rem;
+    margin-top: 7.5rem;
 }
 
 .info-box {
@@ -153,7 +171,7 @@
     }
     .section-1 {
         grid-template-columns: 5rem 1fr 1fr;
-        margin-top: 3.5rem;
+        margin-top: 7.5rem;
     }
     
     .info-box {
@@ -167,7 +185,7 @@
     .menu-bar {
         width: 50%;
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         
     }
     .menu-bar a:hover {
@@ -179,6 +197,11 @@
     }
     #bars {
         display: none;
+    }
+}
+@media (min-width: 590px) and (max-width: 949px){
+    #myPhoto {
+        width: 400px;
     }
 }
 
