--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@
     color: white;
     cursor: pointer;
     margin-top: 5px;
+    z-index: 0;
 }
 
 /* =======================nav-bar=================== */
@@ -102,6 +103,7 @@
         color: white;
         font-size: 17px;
         font-weight: 400;
+        user-select: none;
     }
     
     .menu-bar li a:hover {
@@ -113,11 +115,11 @@
     display: none;
     width: 100%;
     height: 100%;
-    position: absolute;
-    top: 4.8rem;
+    position: fixed;
+    top: 0;
     left: 0;
     z-index: 2;
-    background-color: rgba(255, 255, 255,0.1);
+    background-color: rgba(250, 146, 0, 0.1);
     backdrop-filter: blur(3px);
 }
 
