--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,9 @@
     --main-color: #033a80;
     --bg-color: #ffff;
     --text-color: #0f0c27;
-    --hover: hsl(260, 100%, 51%);
+    --hover: cyan;
+    --mirror-blur: rgba(255, 255, 255,0.2);
+    --bg-blur: rgba(255, 157, 53,.2);
 }
 
 #menuClick {
@@ -21,9 +23,6 @@
     align-items: center;
 }
 #bars {
-    /* background-image: url(../images/bars-solid.svg); */
-    /* background-repeat: no-repeat; */
-    /* background-position: center; */
     width: 20px;
     cursor: pointer;
 }
@@ -63,7 +62,7 @@
     line-height: 4rem;
 }
 .nav-bg {
-    background-color: rgba(255, 255, 255,0.2);
+    background-color: var(--mirror-blur);
     backdrop-filter: blur(30px);
     min-height: 4rem;
     box-shadow: 0 -10px 20px 10px rgb(157, 157, 157);
@@ -100,7 +99,7 @@
     
     .menu-bar li a{
         padding: 5px 0;
-        color: white;
+        color: var(--bg-color);
         font-size: 17px;
         font-weight: 400;
         user-select: none;
@@ -119,7 +118,7 @@
     top: 0;
     left: 0;
     z-index: 2;
-    background-color: rgba(250, 146, 0, 0.1);
+    background-color: var(--bg-blur);
     backdrop-filter: blur(3px);
 }
 
@@ -191,7 +190,7 @@
         
     }
     .menu-bar a:hover {
-        color: var(--main-color);
+        color: var(--hover);
     }
     .menu-bar a {
         font-size: 17px;
