fix new feature

--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@
     .menu-bar {
         position: absolute;
         width: 250px;
-        height: 90vh;
+        height: 500px;
         background-color: rgb(255, 255, 255);
         border-bottom-left-radius: 54%;
         padding-top: 6rem;
